--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,8 @@
-buildscript { repositories {
-    mavenCentral()
-}}
+buildscript {
+    repositories {
+        mavenCentral()
+    }
+}
 
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 plugins {
